<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Absences</string>
    <string name="action_settings">Préférences</string>
    <string name="action_account">Mon Compte</string>
    <string name="titre">Absences</string>
    <string name="login">Login : </string>
    <string name="action_logout">Déconnexion</string>
    <string name="passe">Mot de passe : </string>
    <string name="prenom">Prénom : </string>
    <string name="nom">Nom : </string>
    <string name="ok">OK</string>
    <string name="monCompte">Mon Compte</string>
    <string name="couleur">Couleur Préférée : </string>
    <string name="choixSeance">Choix Séance</string>
    <string name="seances_titre">Séances du </string>
    <string name="seance_titre">Séance </string>
    <string name="preferences">Préférences</string>
    <string name="remember">Se souvenir de moi : </string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_compte">Compte</string>
    <string name="title_activity_choix_seance">ChoixSéance</string>
    <string name="title_activity_seance">Séance</string>
    
    <string name="title_fiche_eleve">Fiche élève</string>
    <string name="nom_eleve_string">Nom</string>
    <string name="prenom_eleve_string">Prenom</string>
    <string name="nombre_seance_string">Séances assistés</string>
    <string name="nombre_retard_string">Séances en retard</string>
    <string name="nombre_absence_string">Séances Absent</string>
    
    
    
    <string name="hello_world">Hello world!</string>
    <string name="ButtonValiderSignature">Valider</string>
    <string name="signature_settings">Effacer</string>
    <string name="seance_valider">Valider</string>
	<string name="seance_retard">Retard</string>
	<string name="signature_retard">retard</string>
	<string name="login_progress_signing_in">Signing in&#8230;</string>
	<string name="deconnexion_fail">La deconnexion a échouée! </string>
	<string name="deconnecte">Deconnecté</string>
</resources>