<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|right"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <TextView
        android:id="@+id/login_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/titre"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/login_labelLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_edtLogin"
        android:layout_alignLeft="@+id/login_titre"
        android:layout_alignRight="@+id/login_labelPasse"
        android:layout_below="@+id/login_titre"
        android:layout_marginTop="15dp"
        android:text="@string/login" />

    <EditText
        android:id="@+id/login_edtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_edtPasse"
        android:layout_alignRight="@+id/login_titre"
        android:layout_below="@+id/login_titre"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/login_labelPasse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_edtPasse"
        android:layout_below="@+id/login_edtLogin"
        android:layout_marginTop="16dp"
        android:text="@string/passe" />

    <EditText
        android:id="@+id/login_edtPasse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/login_btnOK"
        android:layout_below="@+id/login_edtLogin"
        android:layout_toRightOf="@+id/login_labelPasse"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/login_labelRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_cbRemember"
        android:layout_below="@+id/login_edtPasse"
        android:layout_marginTop="12dp"
        android:text="@string/remember" />

    <CheckBox
        android:id="@+id/login_cbRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_edtPasse"
        android:layout_toRightOf="@+id/login_labelRemember" />

    <Button
        android:id="@+id/login_btnOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/login_cbRemember"
        android:enabled="false"
        android:text="@string/ok" />

</RelativeLayout>