<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|right"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <TextView
        android:id="@+id/title_fiche_eleve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title_fiche_eleve"
        android:textSize="12pt" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.04" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:text="@string/nom_eleve_string" />

        <EditText
            android:id="@+id/prenom_eleve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignLeft="@+id/nom_eleve"
            android:layout_alignParentRight="true"
            android:ems="10" 
            android:enabled="false" />

        <EditText
            android:id="@+id/nom_eleve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/textView2"
            android:ems="10" 
            android:enabled="false" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/nom_eleve"
            android:layout_marginTop="21dp"
            android:text="@string/prenom_eleve_string" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/nb_seance_editText"
            android:layout_marginTop="20dp"
            android:text="@string/nombre_absence_string" />

        <EditText
            android:id="@+id/nb_absence_editText"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/textView5"
            android:ems="10"
            android:inputType="number" 
            android:enabled="false" >
        </EditText>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/nb_absence_editText"
            android:layout_marginTop="14dp"
            android:text="@string/nombre_retard_string" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/prenom_eleve"
            android:layout_marginTop="16dp"
            android:text="@string/nombre_seance_string" />

        <EditText
            android:id="@+id/nb_retard_editText"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignLeft="@+id/nb_absence_editText"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:inputType="number" 
            android:enabled="false" />

        <EditText
            android:id="@+id/nb_seance_editText"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/textView4"
            android:ems="10"
            android:inputType="number" 
            android:enabled="false" />

    </RelativeLayout>

</LinearLayout>